# internal/adapter/handler/echo_handler.go
@@ -89,6 +89,96 @@ func (h *EchoHandler) GetDevices(ctx echo.Context, params api.GetDevicesParams) 
 	return nil
 }
 
+// ExecuteAdbPush Execute adb push command that push file(s) and report result.
+// (POST /api/adb/push)
+func (h *EchoHandler) ExecuteAdbPush(ctx echo.Context, params api.ExecuteAdbPushParams) error {
+	// bind body
+	var body api.ExecuteAdbPullJSONRequestBody
+	if err := ctx.Bind(&body); err != nil {
+		return ctx.JSON(http.StatusBadRequest, apiconv.MakeBadRequest(err))
+	}
+
+	slog.Debug("EchoHandler::ExecuteAdbPush", "params", params, "body", body)
+
+	// convert to domain (with validate)
+	args := controller.CommandArgsToDomain(&params.Args)
+	targets, err := controller.SerialListToDomain(body)
+	if err != nil {
+		return ctx.JSON(http.StatusBadRequest, apiconv.MakeBadRequest(err))
+	}
+
+	// parepare commands
+	exec := service.NewMultiCommand()
+	for _, serial := range targets {
+		cmd := infra.NewAdbCommandWithSerial(domain.CommandPush, serial, args...)
+		exec.Add(serial, cmd)
+	}
+
+	// prepare reporter
+	reporter := presenter.NewSSEReporter(ctx.Response())
+
+	// start command
+	ch := exec.Start(ctx.Request().Context())
+	for {
+		result, ok := <-ch
+		if !ok {
+			reporter.ReportClose()
+			break
+		}
+		if err := reporter.ReportCommandResult(result); err != nil {
+			slog.Error("command result report error", "err", err, "result", result)
+			return nil
+		}
+	}
+
+	return nil
+}
+
+// ExecuteAdbPull Execute adb pull command that pull file(s) and report result.
+// (POST /api/adb/pull)
+func (h *EchoHandler) ExecuteAdbPull(ctx echo.Context, params api.ExecuteAdbPullParams) error {
+	// bind body
+	var body api.ExecuteAdbPullJSONRequestBody
+	if err := ctx.Bind(&body); err != nil {
+		return ctx.JSON(http.StatusBadRequest, apiconv.MakeBadRequest(err))
+	}
+
+	slog.Debug("EchoHandler::ExecuteAdbPull", "params", params, "body", body)
+
+	// convert to domain (with validate)
+	args := controller.CommandArgsToDomain(&params.Args)
+	targets, err := controller.SerialListToDomain(body)
+	if err != nil {
+		return ctx.JSON(http.StatusBadRequest, apiconv.MakeBadRequest(err))
+	}
+
+	// parepare commands
+	exec := service.NewMultiCommand()
+	for _, serial := range targets {
+		cmd := infra.NewAdbCommandWithSerial(domain.CommandPull, serial, args...)
+		exec.Add(serial, cmd)
+	}
+
+	// prepare reporter
+	reporter := presenter.NewSSEReporter(ctx.Response())
+
+	// start command
+	ch := exec.Start(ctx.Request().Context())
+	for {
+		result, ok := <-ch
+		if !ok {
+			reporter.ReportClose()
+			break
+		}
+		if err := reporter.ReportCommandResult(result); err != nil {
+			slog.Error("command result report error", "err", err, "result", result)
+			return nil
+		}
+	}
+
+	return nil
+}
+
 // ExecuteAdbShell Execute adb shell command and report result.
 // (POST /api/adb/shell)
 func (h *EchoHandler) ExecuteAdbShell(ctx echo.Context, params api.ExecuteAdbShellParams) error {
